# claims

./: CLAIMS_ENGINE_AGREEMENTS.md  CLAIMS_ENGINE_DETAILED_DEFINITION.md  CLAIMS_ENGINE_MVP.md  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: auto-merge.yml  ci.yml
crates/claim-graph/claim-graph-application/: Cargo.toml
crates/claim-graph/claim-graph-application/src/: dto.rs  error.rs  lib.rs
crates/claim-graph/claim-graph-application/src/use_cases/: create_claim_graph.rs  mod.rs
crates/claim-graph/claim-graph-domain/: Cargo.toml
crates/claim-graph/claim-graph-domain/src/: aggregate.rs  error.rs  event.rs  lib.rs  ports.rs  repository.rs  value_object.rs
crates/claim-graph/claim-graph-infrastructure/: Cargo.toml
crates/claim-graph/claim-graph-infrastructure/src/: event_publisher.rs  lib.rs  repository.rs
crates/claims/: Cargo.toml
crates/claims/src/: lib.rs
crates/claims/src/application/: claim_service.rs  claims.rs  error.rs  mod.rs  ports.rs
crates/claims/src/domain/: claim.rs  content.rs  error.rs  fingerprint.rs  id.rs  iri.rs  mod.rs  provenance.rs  time.rs
crates/claims/src/infrastructure/: in_memory.rs  mod.rs
crates/claims/src/projection/: mod.rs
crates/claims/tests/: claim_service.rs
crates/shared-kernel/: Cargo.toml
crates/shared-kernel/src/: events.rs  ids.rs  lib.rs
design/: ADR_CLAIM_STORAGE_PORTABILITY_AND_FEDERATION.md  CLAIMS_ENGINE_DOMAIN_MODEL.md  CLAIM_AND_SNAPSHOT_COMMITMENTS.md  original_paper.md
