[package]
name = "claim-graph-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared-kernel = { path = "../../shared-kernel" }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
